# ahead-take-home

./: .gitignore  README.md  compose.yaml  pyproject.toml  requirements.txt
api-service/: Containerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
api-service/app/: db.py  job.py  logging.py  settings.py
api-service/app/alembic/: env.py
api-service/app/alembic/versions/: 2025_10_17_2304-f4112605d95d_add_s3_key_column_to_fcs_files_table.py  2025_10_18_0225-a0c39c8a8a81_make_upload_time_timezone_aware.py  2025_10_18_1354-9e546b1ef3a0_add_email_verified_column_to_users_table.py  2025_10_18_1708-cf880c3c9dd3_link_users_table_and_fcs_files_table.py  2025_10_19_1628-d7d6a064e639_link_jobs_table_and_users_table.py  2025_10_19_1704-b4044b3ba4da_make_job_type_string.py  2025_10_19_1710-586261512215_add_status_field_to_jobs_table.py  2025_10_19_2247-db77633993ae_rename_job_kwargs_to_job_args.py  2025_10_20_0344-64d47a11fc1d_add_job_working_duration_second_field.py
api-service/app/models/: __init__.py
api-service/app/routers/: __init__.py  fcs_file_router.py  file_router.py  me_router.py
api-service/app/tests/: 0000123456_1234567_AML_ClearLLab10C_BTube.fcs  conftest.py  test_003_auth.py  test_005_file.py  test_007_user_public_file.py  test_009_user_private_file.py  test_011_user_files_stat_job.py  test_013_user_fcs_info_job.py
api-service/scripts/: docker-build-development-image.sh
api-service/templates/: .env.development
app/: __main__.py  db.py  main.py  settings.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 2025_10_17_0138-092773789ded_add_upload_bathces_table_and_fcs_files_.py  2025_10_18_1019-00e25c5f5843_add_users_table.py  2025_10_18_1652-601a292b2a04_add_public_column_to_fcs_files_table.py  2025_10_19_1622-91bd5e9fa8c4_add_jobs_table.py
app/auth/: __init__.py
app/models/: __init__.py
app/routers/: __init__.py  auth_router.py  file_router.py  system_router.py
app/tests/: conftest.py  test_001_system.py  test_002_file.py  test_003_auth.py  test_005_file.py  test_007_user_public_file.py  test_009_user_private_file.py  test_011_user_files_stat_job.py
job-service/: .dockerignore  Containerfile  README.md  pyproject.toml  requirements.txt
job-service/jobs/: __main__.py  db.py  logging.py  main.py  settings.py
job-service/logs/: .gitignore
job-service/scripts/: docker-build-development-image.sh
job-service/templates/: .env.development
postgres/: .gitignore
scripts/: docker-build-development-image.sh
templates/: .env.development
tests/: .coverage  coverage.xml  pyproject.toml  requirements.txt
tests/tests/: conftest.py  logging.py  test_001_user_files_stat_job.py
