[project]
name = "api-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Leon" }]
dependencies = [
    "fastapi[standard]>=0.128.0",
    "sqlmodel>=0.0.32",
    "pydantic-settings>=2.12.0",
    "loguru>=0.7.3",
    "pathvalidate>=3.3.1",
    "aiobotocore>=3.1.1",
    "python-ulid>=3.1.0",
    "alembic>=1.18.3",
    "psycopg[binary]>=3.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt[crypto]>=2.11.0",
    "rq>=2.6.1",
]
requires-python = ">=3.12"
readme = "README.md"


[project.optional-dependencies]
dev = [
    "ipykernel>=7.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "mimesis>=19.1.0",
    "types-aiobotocore[s3]>=3.1.1",
]


[tool.pdm]
distribution = false


[tool.pytest.ini_options]
log_level = "INFO"
asyncio_default_fixture_loop_scope = "function"
addopts = """
--exitfirst
--pdb
--pdbcls=IPython.terminal.debugger:TerminalPdb
-v
-r a
--cov
--cov-report=term
--cov-report=html
--cov-report=xml
--no-cov-on-fail
"""
