[project]
name = "job-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Leon" }]
dependencies = [
    "rq>=2.6.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "psycopg[binary]>=3.3.2",
    "sqlmodel>=0.0.32",
    "boto3>=1.42.39",
    "flowio>=1.4.0",
]
requires-python = ">=3.12"
readme = "README.md"


[project.optional-dependencies]
dev = [
    "ipykernel>=7.0.1",
    "pytest-cov>=7.0.0",
    "boto3-stubs[s3]>=1.42.39",
]
[tool.pdm]
distribution = false


[tool.pytest.ini_options]
log_level = "INFO"
asyncio_default_fixture_loop_scope = "function"
addopts = """
--exitfirst
--pdb
--pdbcls=IPython.terminal.debugger:TerminalPdb
-v
-r a
--cov
--cov-report=term
--cov-report=html
--cov-report=xml
--no-cov-on-fail
"""
